--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ Django==4.2.7
 pytz==2023.3.post1
 sqlparse==0.4.4
 typing_extensions==4.8.0
+djangorestframework 3.14.0
+
+celery==5.3.6
+django-celery-beat==2.2.0
+redis==5.0.1
+
